Users Route working
