# models/users.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+
+const UserSchema = new mongoose.Schema({
+  name: { type: String, required: true },
+  email: { type: String, required: true, unique: true },
+  role: { type: String, enum: ['Admin', 'Operator', 'Technician'], default: 'Operator' },
+  oAuthId: { type: String, unique: true },
+  lastLogin: { type: Date, default: Date.now }
+}, { timestamps: true });
+
+module.exports = mongoose.model('User', UserSchema);
